INIT: Add routes and redux

--- a/src/styles/popup.scss
+++ b/src/styles/popup.scss
@@ -11,9 +11,5 @@ html {
 #app {
   height: 480px;
   width: 300px;
-  background: linear-gradient(
-    to bottom,
-    rgb(143, 103, 255) 0%,
-    rgb(97, 55, 211) 100%
-  );
+  background: linear-gradient(to bottom, #8f67ff 0%, #6137d3 100%);
 }
