WALLET: Create wallet and store persistently

--- a/src/styles/popup.scss
+++ b/src/styles/popup.scss
@@ -10,6 +10,7 @@ html {
 }
 
 #app {
+  zoom: 1.2;
   height: 480px;
   width: 300px;
   background: linear-gradient(to bottom, #8f67ff 0%, #6137d3 100%);
