UI: Better voting visibility, Add balance refresh

--- a/src/styles/popup.scss
+++ b/src/styles/popup.scss
@@ -13,6 +13,7 @@ html {
   zoom: 1.25;
   height: 480px;
   width: 300px;
-  background: linear-gradient(180deg, #6a5b7d 0, #46305d);
+  background: linear-gradient(180deg, #2d233a 0, #3b2255);
+  // background: linear-gradient(180deg, #6a5b7d 0, #46305d);
   // background: linear-gradient(to bottom, #8f67ff 0%, #6137d3 100%);
 }
